kube/ingress-svc-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: auth-service.auth.svc.cluster.local
