kube/meilisearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
  namespace: tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meilisearch
  template:
    metadata:
      labels:
        app: meilisearch
    spec:
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:v1.10
          ports:
            - containerPort: 7700
          volumeMounts:
            - name: meili-data
              mountPath: /meili_data
      volumes:
        - name: meili-data
          persistentVolumeClaim:
            claimName: meilisearch-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: tools
spec:
  type: ClusterIp
  ports:
    - port: 7700
      targetPort: 7700
  selector:
    app: meilisearch
