kube/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: tools
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      volumes:
        - name: config-default-vol
          configMap:
            name: config-default
      containers:
        - name: redis
          image: redis:7.0.10-alpine
          ports:
            - containerPort: 6379
          command:
            - redis-server
            - /etc/config/redis.conf
          volumeMounts:
          - name: config-default-vol
            mountPath: /etc/config/redis.conf
            subPath: redis.conf
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: tools
  labels:
    app: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
  type: ClusterIP
